fix: update footer top spacing closes #327

--- a/packages/gatsby-theme-carbon/src/components/Footer/Footer.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Footer/Footer.module.scss
@@ -9,7 +9,7 @@
 
 .grid {
   min-height: 370px;
-  padding-top: $spacing-06;
+  padding-top: $spacing-07;
   padding-bottom: $spacing-07;
   display: flex;
   flex-direction: column;
